# Iris

./: .gitignore  .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/src/: pch.hpp
Editor/src/Editor/: Editor.cpp  Editor.hpp
Iris/: CMakeLists.txt
Iris/src/: pch.hpp
Iris/src/Iris/Core/: Application.cpp  Application.hpp  Base.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Util.hpp  Window.cpp  Window.hpp
Iris/src/Iris/Debug/: ScopeTimer.cpp  ScopeTimer.hpp
Iris/src/Iris/Entity/: Component.cpp  Component.hpp  ComponentStore.hpp  Entity.cpp  Entity.hpp
Iris/src/Iris/Entity/Components/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp
Iris/src/Iris/Math/: Math.cpp  Math.hpp
Iris/src/Iris/Platform/Linux/: EntryPoint.hpp
Iris/src/Iris/Platform/OpenGL/: GLFramebuffer.cpp  GLFramebuffer.hpp  GLMesh.cpp  GLMesh.hpp  GLShaderProgram.cpp  GLShaderProgram.hpp  GLSkybox.cpp  GLSkybox.hpp  GLTexture.cpp  GLTexture.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGlRenderer.cpp  OpenGlRenderer.hpp
Iris/src/Iris/Platform/Vulkan/: Buffer.cpp  Buffer.hpp  CameraData.hpp  Context.cpp  Context.hpp  LightData.hpp  Mesh.cpp  Mesh.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  PushConstants.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  UploadContext.cpp  UploadContext.hpp  Util.cpp  Util.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Iris/src/Iris/Platform/Windows/: EntryPoint.hpp
Iris/src/Iris/Renderer/: MVP.hpp  MVPC.hpp  RenderAPI.hpp  Renderer.cpp  Renderer.hpp  Vertex.cpp  Vertex.hpp
Iris/src/Iris/Scene/: Scene.cpp  Scene.hpp
Iris/src/Iris/Util/: CallbackQueue.cpp  CallbackQueue.hpp  EventEmitter.cpp  EventEmitter.hpp  EventProxy.cpp  EventProxy.hpp  Events.hpp  Input.cpp  Input.hpp
Shaders/: CMakeLists.txt
Shaders/src/: Billboard.frag  Billboard.vert  PBR.frag  PBR.vert  UberShader.frag  UberShader.vert  common.glsl  simple.frag  simple.vert  triangle.frag  triangle.vert  trianglemvpc.vert
Submodules/: CMakeLists.txt
Submodules/Glad/: CMakeLists.txt
Submodules/Glad/include/glad/: glad.h
Submodules/Glad/src/: glad.c
